--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   ],
   "devDependencies": {
     "@types/node": "^14.14.22",
+    "chai": "^4.3.0",
+    "mocha": "^8.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
